Fixed EntryID, Started Config Window, ExoBio Prep Fixed logic so EntryIDs are checked first, if not found then fallback to name. Started a Discovery Manager configuration window but no data implemented yet. Created a preliminary SurfaceSignals class and added to Body. Updated Exobiology class for use in SurfaceSignals class.

--- a/DataDefinitions/EddiDataDefinitions.csproj
+++ b/DataDefinitions/EddiDataDefinitions.csproj
@@ -119,8 +119,8 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
-    <Compile Update="Properties\OrganicVariant.Designer.cs">
-      <DependentUpon>OrganicVariant.resx</DependentUpon>
+    <Compile Update="Properties\OrganicVariantName.Designer.cs">
+      <DependentUpon>OrganicVariantName.resx</DependentUpon>
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
@@ -538,8 +538,12 @@
       <LastGenOutput>OrganicSpeciesCond.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Properties\OrganicVariant.resx">
-      <LastGenOutput>OrganicVariant.Designer.cs</LastGenOutput>
+    <EmbeddedResource Update="Properties\OrganicSpeciesCond.resx">
+      <LastGenOutput>OrganicSpeciesCond.Designer.cs</LastGenOutput>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Properties\OrganicVariantName.resx">
+      <LastGenOutput>OrganicVariantName.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Properties\OrganicSpecies.resx">
