Sample Tracking, Sample Distance Tracking Preliminary implementation of biological sample tracking and distance notifications. Update to Astrological EntryIDs, 8 still missing.

--- a/Events/EddiEvents.csproj
+++ b/Events/EddiEvents.csproj
@@ -28,6 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataDefinitions\EddiDataDefinitions.csproj" />
+    <ProjectReference Include="..\EddiCore\EddiCore.csproj" />
     <ProjectReference Include="..\Utilities\Utilities.csproj" />
   </ItemGroup>
   <ItemGroup>
