--- a/JournalMonitor/EddiJournalMonitor.csproj
+++ b/JournalMonitor/EddiJournalMonitor.csproj
@@ -38,4 +38,7 @@
       <Version>4.3.1</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Windows.Forms" />
+  </ItemGroup>
 </Project>
