Add Nebulas, Regions, Unknown Genus, Fix null predictions Added Nebulas and Regions for predictions and also added some simple logic to announce when near a new nebula and in a new region in Discovery Monitor. Added an "unknown" genus type for ehen predictions fail to make any matches, rare but causes a null exception. Also added some logic to the min/max predicted values that was probably the cause of the null exception in the first place.

--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -62,6 +62,7 @@
     <PackageReference Include="System.Runtime.Extensions">
       <Version>4.3.1</Version>
     </PackageReference>
+    <PackageReference Include="System.Text.Json" Version="7.0.3" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\IPA.Designer.cs">
