--- a/GalnetMonitor/EddiGalnetMonitor.csproj
+++ b/GalnetMonitor/EddiGalnetMonitor.csproj
@@ -31,7 +31,6 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.3</Version>
     </PackageReference>
-    <PackageReference Include="SimpleFeedReader" Version="1.0.9" />
     <PackageReference Include="System.Collections.Immutable">
       <Version>7.0.0</Version>
     </PackageReference>
@@ -44,5 +43,6 @@
     <PackageReference Include="System.Runtime.Extensions">
       <Version>4.3.1</Version>
     </PackageReference>
+    <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0" />
   </ItemGroup>
 </Project>
