--- a/SpeechResponder/EddiSpeechResponder.csproj
+++ b/SpeechResponder/EddiSpeechResponder.csproj
@@ -92,7 +92,7 @@
       <Version>0.15.1</Version>
     </PackageReference>
     <PackageReference Include="Cottle">
-      <Version>2.1.0-experimental1</Version>
+      <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="JetBrains.Annotations">
       <Version>2023.3.0</Version>
