--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -48,7 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Cottle">
-      <Version>2.1.0-experimental1</Version>
+      <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="CSCore">
       <Version>1.2.1.2</Version>
