--- a/Tests/Tests.csproj
+++ b/Tests/Tests.csproj
@@ -43,6 +43,7 @@
     <ProjectReference Include="..\SpeechResponder\EddiSpeechResponder.csproj" />
     <ProjectReference Include="..\SpeechService\EddiSpeechService.csproj" />
     <ProjectReference Include="..\StarMapService\EddiStarMapService.csproj" />
+    <ProjectReference Include="..\StatusMonitor\EddiStatusMonitor.csproj" />
     <ProjectReference Include="..\Utilities\Utilities.csproj" />
     <ProjectReference Include="..\VoiceAttackResponder\EddiVoiceAttackResponder.csproj" />
   </ItemGroup>
