Localization of GUI, Guardian Site Notification, Fix Nebula Visited Added locaization to all text on the GUI tabs for the Discovery Monitor. Implemented a notifrication of guardian sites (to be tested) when entering a system. Fix check for Nebula visited to properly create new DB entry.Added highlight to Nebula visited status to make it more obvious.

--- a/DataDefinitions/EddiDataDefinitions.csproj
+++ b/DataDefinitions/EddiDataDefinitions.csproj
@@ -19,6 +19,21 @@
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
     </Compile>
+    <Compile Update="Properties\GuardianSiteBlueprint.Designer.cs">
+      <DependentUpon>GuardianSiteBlueprint.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+    <Compile Update="Properties\NebulaType.Designer.cs">
+      <DependentUpon>NebulaType.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
+    <Compile Update="Properties\GuardianSiteType.Designer.cs">
+      <DependentUpon>GuardianSiteType.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+    </Compile>
     <Compile Update="Properties\GuardianDesc.Designer.cs">
       <DependentUpon>GuardianDesc.resx</DependentUpon>
       <DesignTime>True</DesignTime>
@@ -441,6 +456,18 @@
   <ItemGroup>
     <EmbeddedResource Update="Properties\AtmosphereThickness.resx">
       <LastGenOutput>AtmosphereThickness.Designer.cs</LastGenOutput>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Properties\GuardianSiteBlueprint.resx">
+      <LastGenOutput>GuardianSiteBlueprint.Designer.cs</LastGenOutput>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Properties\NebulaType.resx">
+      <LastGenOutput>NebulaType.Designer.cs</LastGenOutput>
+      <Generator>PublicResXFileCodeGenerator</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Properties\GuardianSiteType.resx">
+      <LastGenOutput>GuardianSiteType.Designer.cs</LastGenOutput>
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Properties\GuardianDesc.resx">
