--- a/GalnetMonitor/EddiGalnetMonitor.csproj
+++ b/GalnetMonitor/EddiGalnetMonitor.csproj
@@ -39,4 +39,17 @@
     </PackageReference>
     <PackageReference Include="System.ServiceModel.Syndication" Version="8.0.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Properties\GalnetMonitor.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>GalnetMonitor.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\GalnetMonitor.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>GalnetMonitor.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
 </Project>
